[project]
name = "visibility-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Sébastien Liou",email = "sebastien.liou@student-cs.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "visibility_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
